working on weird layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -28,17 +28,17 @@ p a {
 
 .gridMap {
   width: 23%;
-  height: 230px;
+  height: 270px;
 }
 
 .gridMapVideo {
   width: 31%;
-  height: 275px;
+  height: 375px;
 }
 
 .gridMap p, .gridMapVideo p {
   margin-top: 1px;
-  font-size: 16px;
+  font-size: 24px;
 }
 
 .pageTitle {
